log
Thu 16 May 2024 03:16:42 PM UTC: 
 tests:  0|5
total_score: 0/70
334d81b
Thu 16 May 2024 03:18:05 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:27: error: unused variable ‘adj’ [-Werror=unused-variable]
   60 |                     Node* adj=copy(n);
      |                           ^~~
cc1: all warnings being treated as errors
Compilation failed
f402429
Thu 16 May 2024 03:18:31 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|4
total_score: 15/70
b273409
Thu 16 May 2024 03:21:08 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  2|4
total_score: 15/70
a650520
Thu 16 May 2024 03:21:26 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
48fed0e
Thu 16 May 2024 03:30:21 PM UTC: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘cuadro’ [-Werror=unused-variable]
   50 |    int *cuadro = (int*) calloc(9,sizeof(int));
      |         ^~~~~~
sudoku.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
910108a
Thu 16 May 2024 03:31:18 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:80:1: error: control reaches end of non-void function [-Werror=return-type]
   80 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3582d27
Thu 16 May 2024 03:32:22 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
27ba6ef
Thu 16 May 2024 03:39:13 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:13: error: unused variable ‘n’ [-Werror=unused-variable]
  130 |       Node* n = top(s);
      |             ^
sudoku.c:126:10: error: unused variable ‘j’ [-Werror=unused-variable]
  126 |    int i,j ;
      |          ^
sudoku.c:126:8: error: unused variable ‘i’ [-Werror=unused-variable]
  126 |    int i,j ;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
6fc0615
Thu 16 May 2024 03:40:23 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:129:13: error: unused variable ‘n’ [-Werror=unused-variable]
  129 |       Node* n = top(s);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
50f02b3
Thu 16 May 2024 03:40:55 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:126:8: error: unused variable ‘n’ [-Werror=unused-variable]
  126 |    int n;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
22d7c00
Thu 16 May 2024 03:42:08 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:135:13: error: unused variable ‘aux’ [-Werror=unused-variable]
  135 |       Node* aux = first(list);
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
c0bfe3d
Thu 16 May 2024 03:42:41 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:134:13: error: unused variable ‘list’ [-Werror=unused-variable]
  134 |       List* list = get_adj_nodes(n);
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
488a8df
Thu 16 May 2024 03:43:29 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  7|2
total_score: 50/70
334d62a
Thu 16 May 2024 03:43:58 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|2
total_score: 50/70
41cf89f
Thu 16 May 2024 03:49:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
e022c1c
Thu 16 May 2024 03:50:19 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
1b4ebfb
Thu 16 May 2024 03:58:24 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|2
total_score: 50/70
dcd8968
Thu 16 May 2024 04:04:40 PM UTC: 
 sudoku.c | 45 ++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 42 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:171:20: error: implicit declaration of function ‘get_adj_nodes’; did you mean ‘get_valid_adj_nodes’? [-Werror=implicit-function-declaration]
  171 |       List* list = get_adj_nodes(n);
      |                    ^~~~~~~~~~~~~
      |                    get_valid_adj_nodes
sudoku.c:171:20: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c: In function ‘adj_test1’:
test.c:62:17: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   62 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
test.c:95:9: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   95 |     adj = get_adj_nodes(initial);
      |         ^
test.c: In function ‘test_mod_adj’:
test.c:155:17: error: initialization of ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  155 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e9c74cd
Thu 16 May 2024 04:04:46 PM UTC: 
 sudoku.c | 45 +++------------------------------------------
 1 file changed, 3 insertions(+), 42 deletions(-)
 tests:  7|2
total_score: 50/70
beb1103
Thu 16 May 2024 04:09:31 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
7192d97
Thu 16 May 2024 04:10:02 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|2
total_score: 50/70
6dcba52
Sat 18 May 2024 09:53:14 PM UTC: 
 sudoku.c | 49 +++++++++++++++++++++----------------------------
 1 file changed, 21 insertions(+), 28 deletions(-)
 tests:  10|0
total_score: 70/70
9dce612
